SERVER-6648 make TTLMonitor sync userFlags on secondaries